@@ -2270,27 +2270,61 @@
 	</filter>
 	
 	<filter>
+		<name>FD Pitch Takeoff</name>
+		<type>noise-spike</type>
+		<input>
+			<condition>
+				<equals>
+					<property>/it-autoflight/mode/vert</property>
+					<value>T/O CLB</value>
+				</equals>
+			</condition>
+			<expression>
+				<product>
+					<table>
+						<property>/orientation/pitch-deg</property>
+						<entry><ind> 1</ind><dep>1</dep></entry>
+						<entry><ind>10</ind><dep>0</dep></entry>
+					</table>
+					<table>
+						<property>/position/gear-agl-ft</property>
+						<entry><ind> 5</ind><dep>1</dep></entry>
+						<entry><ind>30</ind><dep>0</dep></entry>
+					</table>
+					<property>/it-autoflight/settings/fd-takeoff-offset</property>
+				</product>
+			</expression>
+		</input>
+		<input>0</input>
+		<output>/it-autoflight/fd/pitch-bar-takeoff</output>
+		<max-rate-of-change>7.5</max-rate-of-change>
+	</filter>
+	
+	<filter>
 		<name>FD Pitch</name>
 		<type>noise-spike</type>
 		<input>
 			<expression>
-				<rad2deg>
-					<asin>
-						<div>
-							<difference>
-								<property>/it-autoflight/internal/target-common-fpm</property>
-								<property>/it-autoflight/internal/vert-speed-fpm</property>
-							</difference>
-							<product>
-								<max>
-									<property>/instrumentation/airspeed-indicator[0]/true-speed-kt</property>
-									<value>140</value>
-								</max>
-								<value>151.90288713910761</value> <!-- FPM to Knot * 1.5 -->
-							</product>
-						</div>
-					</asin>
-				</rad2deg>
+				<sum>
+					<rad2deg>
+						<asin>
+							<div>
+								<difference>
+									<property>/it-autoflight/internal/target-common-fpm</property>
+									<property>/it-autoflight/internal/vert-speed-fpm</property>
+								</difference>
+								<product>
+									<max>
+										<property>/instrumentation/airspeed-indicator[0]/true-speed-kt</property>
+										<value>140</value>
+									</max>
+									<value>151.90288713910761</value> <!-- FPM to Knot * 1.5 -->
+								</product>
+							</div>
+						</asin>
+					</rad2deg>
+					<property>/it-autoflight/fd/pitch-bar-takeoff</property>
+				</sum>
 			</expression>
 		</input>
 		<output>/it-autoflight/fd/pitch-bar</output>
