@@ -13,6 +13,7 @@ V4.0.8 Beta 4:
 * Added: More flexible bank limit system with overrides (New config required)
 * Added: Ability to adjust FLCH acceleration/deceleration rate (New config required)
 * Added: Improved flight director pitch calculation
+* Added: Ability to adjust flight director pitch bar when on the ground in takeoff mode
 * Changed: Tweaked rate scheme slightly
 
 [Logic]
